--- a/bads-camera.service
+++ b/bads-camera.service
@@ -6,8 +6,6 @@ Wants=network.target
 [Service]
 Type=simple
 User=pi
-Group=video
-SupplementaryGroups=video
 WorkingDirectory=/opt/bads-rpi
 ExecStart=/usr/bin/python3 /opt/bads-rpi/http/flask_camera_server.py
 Restart=always
@@ -24,15 +22,9 @@ Environment=XDG_RUNTIME_DIR=/run/user/1000
 LimitNOFILE=1024
 MemoryMax=256M
 
-# Security settings - Modified for camera access
+# Security settings - Minimal for user services
 NoNewPrivileges=true
-PrivateTmp=true
-# ProtectSystem=strict  # Disabled for camera device access
 ReadWritePaths=/opt/bads-rpi
-# Allow access to camera devices
-DeviceAllow=/dev/video0 rw
-DeviceAllow=/dev/video1 rw
-DevicePolicy=closed
 
 [Install]
 WantedBy=multi-user.target
