--- a/bads-camera.service
+++ b/bads-camera.service
@@ -1,30 +1,16 @@
 [Unit]
 Description=BADS Flask Camera Server for ESP32
 After=network.target
-Wants=network.target
 
 [Service]
 Type=simple
-User=pi
 WorkingDirectory=/opt/bads-rpi
 ExecStart=/usr/bin/python3 /opt/bads-rpi/http/flask_camera_server.py
 Restart=always
 RestartSec=10
-StandardOutput=journal
-StandardError=journal
 
 # Environment variables
 Environment=PYTHONPATH=/opt/bads-rpi
-Environment=DISPLAY=:0
-Environment=XDG_RUNTIME_DIR=/run/user/1000
-
-# Resource limits for Pi Zero 2W
-LimitNOFILE=1024
-MemoryMax=256M
-
-# Security settings - Minimal for user services
-NoNewPrivileges=true
-ReadWritePaths=/opt/bads-rpi
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
